--- a/src/moonstone/ilsa/plugins/text/resources/ui/qt/textproperties.ui
+++ b/src/moonstone/ilsa/plugins/text/resources/ui/qt/textproperties.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>216</width>
+    <width>200</width>
     <height>342</height>
    </rect>
   </property>
@@ -27,7 +27,33 @@
       </size>
      </property>
      <layout class="QGridLayout" name="gridLayout_6">
-      <item row="2" column="1">
+      <item row="3" column="0">
+       <widget class="QLabel" name="label_10">
+        <property name="text">
+         <string>Color</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="1">
+       <widget class="QComboBox" name="fontCombo">
+        <item>
+         <property name="text">
+          <string>Arial</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Courier</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>Times</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item row="3" column="1">
        <widget class="QWidget" name="widget_5" native="true">
         <property name="minimumSize">
          <size>
@@ -67,14 +93,65 @@
         </layout>
        </widget>
       </item>
-      <item row="0" column="0">
+      <item row="7" column="0">
+       <widget class="QCheckBox" name="visible">
+        <property name="text">
+         <string>Visible</string>
+        </property>
+        <property name="checked">
+         <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="1">
+       <widget class="QCheckBox" name="italic">
+        <property name="text">
+         <string>Italic</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1">
+       <widget class="QLineEdit" name="textField"/>
+      </item>
+      <item row="5" column="0">
+       <widget class="QLabel" name="label_2">
+        <property name="text">
+         <string>Font Size</string>
+        </property>
+       </widget>
+      </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label">
+        <property name="text">
+         <string>Font</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
        <widget class="QLabel" name="label_5">
         <property name="text">
          <string>Text</string>
         </property>
        </widget>
       </item>
-      <item row="7" column="1">
+      <item row="5" column="1">
+       <widget class="QSpinBox" name="fontSize">
+        <property name="minimum">
+         <number>1</number>
+        </property>
+        <property name="value">
+         <number>12</number>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="0">
+       <widget class="QCheckBox" name="bold">
+        <property name="text">
+         <string>Bold</string>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="0">
        <widget class="QPushButton" name="newTextButton">
         <property name="text">
          <string>New</string>
@@ -85,7 +162,7 @@
         </property>
        </widget>
       </item>
-      <item row="7" column="0">
+      <item row="0" column="1">
        <widget class="QPushButton" name="deleteTextButton">
         <property name="text">
          <string>Delete</string>
@@ -96,92 +173,34 @@
         </property>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QLabel" name="label_10">
-        <property name="text">
-         <string>Color</string>
-        </property>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QLineEdit" name="textField"/>
-      </item>
-      <item row="3" column="0">
-       <widget class="QLabel" name="label">
-        <property name="text">
-         <string>Font</string>
-        </property>
-       </widget>
-      </item>
-      <item row="3" column="1">
-       <widget class="QComboBox" name="fontCombo">
-        <item>
-         <property name="text">
-          <string>Arial</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Courier</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Times</string>
-         </property>
-        </item>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_2">
-        <property name="text">
-         <string>Font Size</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="1">
-       <widget class="QSpinBox" name="fontSize">
-        <property name="minimum">
-         <number>1</number>
-        </property>
-        <property name="value">
-         <number>12</number>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="0">
-       <widget class="QCheckBox" name="bold">
-        <property name="text">
-         <string>Bold</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="1">
-       <widget class="QCheckBox" name="italic">
-        <property name="text">
-         <string>Italic</string>
-        </property>
-       </widget>
-      </item>
-      <item row="6" column="0">
-       <widget class="QCheckBox" name="visible">
-        <property name="text">
-         <string>Visible</string>
-        </property>
-        <property name="checked">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
      </layout>
     </widget>
    </item>
    <item>
     <widget class="QGroupBox" name="textGroup">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>80</height>
+      </size>
+     </property>
      <property name="title">
       <string>Texts</string>
      </property>
     </widget>
+   </item>
+   <item>
+    <spacer name="verticalSpacer">
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>20</width>
+       <height>40</height>
+      </size>
+     </property>
+    </spacer>
    </item>
   </layout>
  </widget>
